force-app/main/default/objects/Attendee_Processing_Log__c/Attendee_Processing_Log__c.object-meta.xml
<CustomObject>
    <label>Attendee Processing Log</label>
    <pluralLabel>Attendee Processing Logs</pluralLabel>
    <nameField>
        <label>Log Number</label>
        <displayFormat>APL-{00000}</displayFormat>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description
  >Tracks each execution of the attendee collection automation flows</description>
</CustomObject>