force-app/main/default/objects/Attendee_Processing_Log__c/fields/AI_Model_Used__c.field-meta.xml
<CustomField>
    <fullName>AI_Model_Used__c</fullName>
    <label>AI Model Used</label>
    <type>Text</type>
    <length>50</length>
</CustomField>