force-app/main/default/objects/Attendee_Processing_Log__c/fields/AI_Prompt_Input__c.field-meta.xml
<CustomField>
    <fullName>AI_Prompt_Input__c</fullName>
    <label>AI Prompt Input</label>
    <type>TextArea</type>
</CustomField>