force-app/main/default/objects/Attendee_Processing_Log__c/fields/AI_Raw_Response__c.field-meta.xml
<CustomField>
    <fullName>AI_Raw_Response__c</fullName>
    <label>AI Raw Response</label>
    <type>TextArea</type>
</CustomField>