force-app/main/default/objects/Attendee_Processing_Log__c/fields/Attendees_Provided__c.field-meta.xml
<CustomField>
    <fullName>Attendees_Provided__c</fullName>
    <label>Attendees Provided</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>