force-app/main/default/objects/Attendee_Processing_Log__c/fields/Email_Message_Id__c.field-meta.xml
<CustomField>
    <fullName>Email_Message_Id__c</fullName>
    <label>Email Message Id</label>
    <type>Text</type>
    <length>18</length>
</CustomField>