force-app/main/default/objects/Attendee_Processing_Log__c/fields/Flow_Interview_GUID__c.field-meta.xml
<CustomField>
    <fullName>Flow_Interview_GUID__c</fullName>
    <label>Flow Interview GUID</label>
    <type>Text</type>
    <length>50</length>
</CustomField>