force-app/main/default/objects/Attendee_Processing_Log__c/fields/Open_Slots_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Open_Slots_Remaining__c</fullName>
    <label>Open Slots Remaining</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>