force-app/main/default/objects/Attendee_Processing_Log__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <label>Opportunity</label>
    <type>Lookup</type>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Attendee Processing Logs</relationshipLabel>
    <relationshipName>Attendee_Processing_Logs</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>