force-app/main/default/objects/Attendee_Processing_Log__c/fields/Outgoing_Email_Id__c.field-meta.xml
<CustomField>
    <fullName>Outgoing_Email_Id__c</fullName>
    <label>Outgoing Email Id</label>
    <type>Text</type>
    <length>18</length>
</CustomField>