force-app/main/default/objects/Attendee_Processing_Log__c/fields/Processing_Date__c.field-meta.xml
<CustomField>
    <fullName>Processing_Date__c</fullName>
    <label>Processing Date</label>
    <type>DateTime</type>
</CustomField>