force-app/main/default/objects/Attendee_Processing_Log__c/fields/Processing_Type__c.field-meta.xml
<CustomField>
    <fullName>Processing_Type__c</fullName>
    <label>Processing Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Outbound Email</fullName><default
        >false</default><label>Outbound Email</label></value>
            <value><fullName>Inbound Reply</fullName><default
        >false</default><label>Inbound Reply</label></value>
            <value><fullName>Manual Reprocess</fullName><default
        >false</default><label>Manual Reprocess</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>