force-app/main/default/objects/Attendee_Processing_Log__c/fields/Recipients__c.field-meta.xml
<CustomField>
    <fullName>Recipients__c</fullName>
    <label>Recipients</label>
    <type>TextArea</type>
</CustomField>