force-app/main/default/objects/Attendee_Processing_Log__c/fields/Sender_Name__c.field-meta.xml
<CustomField>
    <fullName>Sender_Name__c</fullName>
    <label>Sender Name</label>
    <type>Text</type>
    <length>255</length>
</CustomField>