force-app/main/default/objects/Attendee_Processing_Log__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>In Progress</fullName><default>true</default><label
        >In Progress</label></value>
            <value><fullName>Success</fullName><default>false</default><label
        >Success</label></value>
            <value><fullName>Partial</fullName><default>false</default><label
        >Partial</label></value>
            <value><fullName>Failed</fullName><default>false</default><label
        >Failed</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>