force-app/main/default/objects/Attendee_Processing_Log__c/fields/Total_Registration_Products__c.field-meta.xml
<CustomField>
    <fullName>Total_Registration_Products__c</fullName>
    <label>Total Registration Products</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>