force-app/main/default/objects/Attendee_Processing_Log__c/listViews/Failed_Processing_Runs.listView-meta.xml
<ListView>
    <fullName>Failed_Processing_Runs</fullName>
    <label>Failed Processing Runs</label>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Failed</value>
    </filters>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Processing_Type__c</columns>
    <columns>Error_Category__c</columns>
    <columns>Error_Message__c</columns>
    <columns>Sender_Email__c</columns>
    <columns>CREATED_DATE</columns>
</ListView>