force-app/main/default/objects/Attendee_Processing_Log__c/listViews/Outbound_Email_Logs.listView-meta.xml
<ListView>
    <fullName>Outbound_Email_Logs</fullName>
    <label>Outbound Email Logs</label>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Processing_Type__c</field>
        <operation>equals</operation>
        <value>Outbound Email</value>
    </filters>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Status__c</columns>
    <columns>Recipients__c</columns>
    <columns>Email_Subject__c</columns>
    <columns>Total_Registration_Products__c</columns>
    <columns>CREATED_DATE</columns>
</ListView>